codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__fresh_sparkle_tests__astra_picker_confirms_the_model_at_application_after_an_automatic_update.snap
---
source: tui/src/app/tests/fresh_sparkle_tests.rs
expression: "snapshots.join(\"\\n\\n\")"
---
default no-op:
› Ask Ore to do anything


default changes model:
                            ⠈     ⢀     ⠁                 ⠂
›⠁Ask Ore to do anything           ⠈      ⠁
       ⢀            ⠠     ⠄         ⠠          ⢀    ⠠     ⡀
